--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
     <p>Họ và tên: Nguyễn Văn B</p>
     <p>Địa chị: Lào</p>
     <p>Số điện thoại: 0987123456</p>
-    <p>Email:nguyenb@gmail.com</p>
+    <p>Email: <a href="">nguyenb@gmail.com</a></p>
     <p>Ảnh</p> <img src="https://edu.viettel.vn/upload/19937/20170623/tai_xuong.jpg" alt="B">
     <p>Học vấn: Out trường</p>
     <p>Bằng cấp: Giáo sư </p>
