--- a/taoformdongian1.html
+++ b/taoformdongian1.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <form action="taoformdongian1.html" method="post">
     <h2 style="background-color: orange; color: white; text-align: center;">SỞ THÍCH CỦA BẠN</h2>
     <table>
         <tr>
@@ -45,6 +46,7 @@
     </table>
     <button type="submit">Gửi thông tin</button>
     <button type="reset">Nhập lại</button>
+</form>
 </body>
 
 </html>
