--- a/tablesimple.html
+++ b/tablesimple.html
@@ -7,8 +7,8 @@
     <title>simpletable</title>
 </head>
 <body>
-    <table border="1">
-        <tr>
+    <table>
+        <tr style="text-align: left; background-color: gainsboro;">
             <th>Company</th>
             <th>Contact</th>
             <th>Country</th>
@@ -18,7 +18,7 @@
             <td>Marria Anders</td>
             <td>Germany</td>
         </tr>
-        <tr>
+        <tr style="background-color: gainsboro;">
             <td>Centro comercial Moctezuma</td>
             <td>Francisco Chang</td>
             <td>Mexico</td>
@@ -28,7 +28,7 @@
             <td>Roland Mendel</td>
             <td>Austria</td>
         </tr>
-        <tr>
+        <tr style="background-color: gainsboro;">
             <td>Island Tranding</td>
             <td>Helen Bennett</td>
             <td>UK</td>
@@ -38,7 +38,7 @@
             <td>Yoshi Tannamuri</td>
             <td>Canada</td>
         </tr>
-        <tr>
+        <tr style="background-color: gainsboro;">
             <td>Magazzini Alimentari Riuniti</td>
             <td>Giovanni Rovelli</td>
             <td>Italt</td>
