--- a/simpleform.html
+++ b/simpleform.html
@@ -14,8 +14,8 @@
         <p>What whould you like to buy?</p>
         <select>
         <option value="  ">A</option>
-        <option>B</option>
-        <option>C</option>
+        <option>B(+ 0,5$)</option>
+        <option>C(+ 0,5$)</option>
     </select>
     <p>How many would you like to order</p>
     <input type="radio" name="rd"> 1 - $10 <br>
