--- a/taoformdongian1.html
+++ b/taoformdongian1.html
@@ -13,35 +13,37 @@
     <h2 style="background-color: orange; color: white; text-align: center;">SỞ THÍCH CỦA BẠN</h2>
     <table>
         <tr>
-            <td>Họ và tên</td>
+            <td style="color: blue;">Họ và tên</td>
             <td><input type="text" name="name"></td>
         </tr>
         <tr>
-            <td>Email </td>
+            <td style="color: blue; text-align: right;">Email </td>
             <td>
                 <input type="text" name="Email">
             </td>
         </tr>
     </table>
-    <p>Sở thích</p>  
     <table>
         <tr>
+            <td r style="color: blue;">Sở thích</td>
             <td><input type="checkbox" name="hobby"></td>
-            <td>Thể thao</td>
+            <td style="color: blue;">Thể thao</td>
             <td><input type="checkbox" name="hobby"></td>
-            <td>Âm nhạc</td>
+            <td style="color: blue;">Âm nhạc</td>
             <td><input type="checkbox" name="hobby"></td>
-            <td>Đọc sách</td> 
+            <td style="color: blue;">Đọc sách</td> 
         </tr> <tr>
+            <td style="color: blue;"> </td>
+            <td ><input type="checkbox" name="hobby"></td>
+            <td style="color: blue;">Lướt web</td>
             <td><input type="checkbox" name="hobby"></td>
-            <td>Lướt web</td>
+            <td style="color: blue;">Chơi game</td>
             <td><input type="checkbox" name="hobby"></td>
-            <td>Chơi game</td>
-            <td><input type="checkbox" name="hobby"></td>
-            <td>Điện ảnh</td>
+            <td style="color: blue;">Điện ảnh</td>
         </tr> <tr>
+            <td style="color: blue;"> </td>
             <td><input type="checkbox" name="hobby"></td>
-            <td>Du lịch</td>
+            <td style="color: blue;">Du lịch</td>
         </tr>
     </table>
     <button type="submit">Gửi thông tin</button>
