--- a/taoformdongian2.html
+++ b/taoformdongian2.html
@@ -7,28 +7,28 @@
     <title>form2</title>
 </head>
 <body>
-    <form action="taoformdongian2.html" method="post">
+    <form action="taoformdongian2.html" method="post" style="background-color: rgb(247, 247, 3);">
     <h2>ĐĂNG KÍ HỌC VIÊN</h2>
     <table>
         <tr>
-            <td>Họ và tên</td>
+            <td style="color: blue;">Họ và tên</td>
             <td><input type="text"></td>
         </tr>
         <tr>
-            <td>Ngày sinh</td>
+            <td style="color: blue;">Ngày sinh</td>
             <td><input type="text"></td>
         </tr>
         <tr>
-            <td>Giới tính</td>
+            <td style="color: blue;">Giới tính</td>
             <td><input type="checkbox" value="sex"> Nam</td>
             <td><input type="checkbox" value="sex"> Nữ</td>
         </tr>
         <tr>
-            <td>Địa chỉ</td>
+            <td style="color: blue;">Địa chỉ</td>
             <td><input type="text" name="adrress"></td>
         </tr>
         <tr>
-            <td>Lớp</td>
+            <td style="color: blue;">Lớp</td>
             <td>
                 <select >
                     <option value="A">Chọn lớp</option>
@@ -40,16 +40,19 @@
             </td>
         </tr>
         <tr>
-            <td>Email</td>
+            <td style="color: blue;">Email</td>
             <td><input type="text" name="email" ></td>
         </tr>
         <tr>
-            <td>Điện thoại</td>
+            <td style="color: blue;"    >Điện thoại</td>
             <td><input type="text" name="phonenumber"></td>
         </tr>
+        <tr>
+            <td> </td>
+    <td><button type="submit" name="submit">Đăng ký</button>
+    <button type="reset" name="reset">Nhập lại</button></td>
+    </tr>
     </table>
-    <button type="submit" name="submit">Đăng ký</button>
-    <button type="reset" name="reset">Nhập lại</button>
 </form>
 </body>
 </html>
