--- a/taoformdongian1.html
+++ b/taoformdongian1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="taoformdongian1.html" method="post">
+    <form action="taoformdongian1.html" method="get">
     <h2 style="background-color: orange; color: white; text-align: center;">SỞ THÍCH CỦA BẠN</h2>
     <table>
         <tr>
