--- a/taoformdongian2.html
+++ b/taoformdongian2.html
@@ -7,7 +7,7 @@
     <title>form2</title>
 </head>
 <body>
-    <form action="taoformdongian2.html" method="post" style="background-color: rgb(247, 247, 3);">
+    <form action="taoformdongian2.html" method="get" style="background-color: rgb(247, 247, 3);">
     <h2>ĐĂNG KÍ HỌC VIÊN</h2>
     <table>
         <tr>
