--- a/googleform.html
+++ b/googleform.html
@@ -10,7 +10,7 @@
 
 <body>
     <form action="https://www.google.com.vn/search" method="get">
-<input type="text" name="q">
+<input type="search" name="q">
 <button  type="submit">Tìm kiếm</button>
     </form>
 </body>
