--- a/taoformdongian2.html
+++ b/taoformdongian2.html
@@ -20,8 +20,8 @@
         </tr>
         <tr>
             <td style="color: blue;">Giới tính</td>
-            <td><input type="checkbox" value="sex"> Nam</td>
-            <td><input type="checkbox" value="sex"> Nữ</td>
+            <td><input type="checkbox" value="sex"> Nam
+            <input type="checkbox" value="sex"> Nữ</td>
         </tr>
         <tr>
             <td style="color: blue;">Địa chỉ</td>
@@ -31,7 +31,7 @@
             <td style="color: blue;">Lớp</td>
             <td>
                 <select >
-                    <option value="A">Chọn lớp</option>
+                    <option value=" ">-Chọn lớp-</option>
                     <option value="A">A</option>
                     <option value="B">B</option>
                     <option value="C">C</option>
