--- a/taoformdongian2.html
+++ b/taoformdongian2.html
@@ -12,11 +12,11 @@
     <table>
         <tr>
             <td style="color: blue;">Họ và tên</td>
-            <td><input type="text"></td>
+            <td><input type="text" name="hvt"></td>
         </tr>
         <tr>
             <td style="color: blue;">Ngày sinh</td>
-            <td><input type="text"></td>
+            <td><input type="date" name="date"></td>
         </tr>
         <tr>
             <td style="color: blue;">Giới tính</td>
@@ -41,11 +41,11 @@
         </tr>
         <tr>
             <td style="color: blue;">Email</td>
-            <td><input type="text" name="email" ></td>
+            <td><input type="email" name="email" ></td>
         </tr>
         <tr>
             <td style="color: blue;"    >Điện thoại</td>
-            <td><input type="text" name="phonenumber"></td>
+            <td><input type="number" name="phonenumber"></td>
         </tr>
         <tr>
             <td> </td>
