--- a/taoformdongian2.html
+++ b/taoformdongian2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="taoformdongian2.html" method="get" style="background-color: rgb(247, 247, 3);">
-    <h2>ĐĂNG KÍ HỌC VIÊN</h2>
+    <h2 style="color: blue; background-color: aquamarine;">ĐĂNG KÍ HỌC VIÊN</h2>
     <table>
         <tr>
             <td style="color: blue;">Họ và tên</td>
@@ -20,8 +20,8 @@
         </tr>
         <tr>
             <td style="color: blue;">Giới tính</td>
-            <td><input type="checkbox" value="sex"> Nam
-            <input type="checkbox" value="sex"> Nữ</td>
+            <td><input type="checkbox" name="sex">Nam
+            <input type="checkbox" name="sex">Nữ</td>
         </tr>
         <tr>
             <td style="color: blue;">Địa chỉ</td>
@@ -45,7 +45,7 @@
         </tr>
         <tr>
             <td style="color: blue;"    >Điện thoại</td>
-            <td><input type="number" name="phonenumber"></td>
+            <td><input type="text" name="phonenumber"></td>
         </tr>
         <tr>
             <td> </td>
