--- a/formdangkinguoidung.html
+++ b/formdangkinguoidung.html
@@ -27,14 +27,14 @@
                 <th style="text-align: left;">Số điện thoại:</th>
             </tr>
             <tr>
-                <td><input type="tel" name="tel"></td>
+                <td><input type="tel" name="phone"></td>
             </tr>
             <tr>
                 <th style="text-align: left;">Giới tính:</th>
             </tr>
             <tr>
-                <td><input type="radio" name="sex" checked>Nam 
-                <input type="radio" name="sex">Nữ</td>
+                <td><input type="radio" name="gender" checked>Nam 
+                <input type="radio" name="gender">Nữ</td>
             </tr>
             <tr>
                 <td>
