--- a/thoikhoabieu.html
+++ b/thoikhoabieu.html
@@ -10,24 +10,16 @@
 
 <body>
     <table>
-        <thead><caption style="color: blue; bol"> <b> THỜI KHOÁ BIỂU</b></caption></thead>
+        <thead><caption style="color: blue"><b>THỜI KHOÁ BIỂU</b></caption></thead>
         <tr style="color: blue;">
-            <td>Lớp: T0908I</td>
-            <td style="color:white;">trung</td>
-            <td style="color:white;">trung</td>
-            <td style="color:white;">trung</td>
-            <td style="color:white;">trung</td>
-            <td style="text-align: right;">Thời gian học: 13h30- 17h30</td>
+            <td colspan="3" style="width:237.69px">Lớp: T0908I</td>
+            <td colspan="3" style="text-align: right; width:271.3px">Thời gian học: 13h30- 17h30</td>
         </tr>
         <tr style="color: blue;">
-            <td>Giáo viên: KhoaNV</td>
-            <td style="color:white;">trung</td>
-            <td style="color:white;">trung</td>
-            <td style="color:white;">trung</td>
-            <td style="color:white;">trung</td>
-            <td style="text-align: right;">Ngày học: Thứ 3, 5, 7</td>
+            <td colspan="3">Giáo viên: KhoaNV</td>
+            <td colspan="3" style="text-align: right">Ngày học: Thứ 3, 5, 7</td>
         </tr><tr style="color: blue;">
-            <td>Phòng học: Class3/Lap3</td>
+            <td colspan="3">Phòng học: Class3/Lap3</td>
         </tr>
         <table border="1">
             <tr>
@@ -68,7 +60,6 @@
             </tr>
         </table>
     </table>
-    
 </body>
 
 </html>
