--- a/taoformdongian1.html
+++ b/taoformdongian1.html
@@ -10,44 +10,39 @@
 
 <body>
     <form action="taoformdongian1.html" method="get">
-    <h2 style="background-color: orange; color: white; text-align: center;">SỞ THÍCH CỦA BẠN</h2>
-    <table>
+        <table>
+            <thead><caption style="background-color: orange; color: white; text-align: center;">SỞ THÍCH CỦA BẠN</caption></thead>
         <tr>
             <td style="color: blue;">Họ và tên</td>
             <td><input type="text" name="name"></td>
         </tr>
         <tr>
-            <td style="color: blue; text-align: right;">Email </td>
+            <td style="color: blue; text-align: right; ">Email </td>
             <td>
                 <input type="text" name="Email">
             </td>
         </tr>
-    </table>
-    <table>
         <tr>
-            <td r style="color: blue;">Sở thích</td>
-            <td><input type="checkbox" name="hobby"></td>
-            <td style="color: blue;">Thể thao</td>
-            <td><input type="checkbox" name="hobby"></td>
-            <td style="color: blue;">Âm nhạc</td>
-            <td><input type="checkbox" name="hobby"></td>
-            <td style="color: blue;">Đọc sách</td> 
+            <td style="color: blue; text-align: right;">Sở thích</td>
+            <td style="color: blue;"><input type="checkbox" name="hobby">Thể thao</td>
+            <td style="color: blue;"><input type="checkbox" name="hobby">Âm nhạc</td>
+            <td style="color: blue;"><input type="checkbox" name="hobby">Đọc sách</td> 
         </tr> <tr>
             <td style="color: blue;"> </td>
-            <td ><input type="checkbox" name="hobby"></td>
-            <td style="color: blue;">Lướt web</td>
-            <td><input type="checkbox" name="hobby"></td>
-            <td style="color: blue;">Chơi game</td>
-            <td><input type="checkbox" name="hobby"></td>
-            <td style="color: blue;">Điện ảnh</td>
+            <td style="color: blue;"><input type="checkbox" name="hobby">Lướt wed</td>
+            <td style="color: blue;"><input type="checkbox" name="hobby">Chơi game</td>
+            <td style="color: blue;"><input type="checkbox" name="hobby">Điện ảnh</td> 
         </tr> <tr>
             <td style="color: blue;"> </td>
-            <td><input type="checkbox" name="hobby"></td>
-            <td style="color: blue;">Du lịch</td>
+            <td style="color: blue;"><input type="checkbox" name="hobby">Du lịch</td>
         </tr>
-    </table>
-    <button type="submit">Gửi thông tin</button>
-    <button type="reset">Nhập lại</button>
+        <tr>
+    <td> </td>
+    <td> <button type="submit">Gửi thông tin</button>
+    <button type="reset">Nhập lại</button></td>
+</tr>
+        </table>
+</table>
 </form>
 </body>
 
