--- a/taoformdongian2.html
+++ b/taoformdongian2.html
@@ -7,9 +7,9 @@
     <title>form2</title>
 </head>
 <body>
-    <form action="taoformdongian2.html" method="get" style="background-color: rgb(247, 247, 3);">
-    <h2 style="color: blue; background-color: aquamarine;">ĐĂNG KÍ HỌC VIÊN</h2>
-    <table>
+    <form action="taoformdongian2.html" method="get" >
+    <table style="background-color: rgb(247, 247, 3);">
+       <thead><caption style="color: blue; background-color: aquamarine;">ĐĂNG KÍ HỌC VIÊN</caption></thead>
         <tr>
             <td style="color: blue;">Họ và tên</td>
             <td><input type="text" name="hvt"></td>
