--- a/taoformdongian2.html
+++ b/taoformdongian2.html
@@ -24,8 +24,8 @@
             <input type="checkbox" name="sex">Nữ</td>
         </tr>
         <tr>
-            <td style="color: blue;">Địa chỉ</td>
-            <td><input type="text" name="adrress"></td>
+            <td style="color: blue; text-align: top-left;">Địa chỉ</td>
+            <td> <textarea name="address" id="" cols="30" rows="3"></textarea>
         </tr>
         <tr>
             <td style="color: blue;">Lớp</td>
