--- a/taobangnangcao.html
+++ b/taobangnangcao.html
@@ -9,33 +9,33 @@
 </head>
 
 <body>
-    <p>Thời khoá biểu</p>
-    <table border="1"">
+    <p><b style="font-size: large;">Thời Khoá Biểu</b></p>
+    <table border="1">
         <tr style="background-color: red; color: white; text-align: center;">
-            <th rowspan="2">Thứ</th>
-            <th colspan="2">Hoạt động</th>
+            <th rowspan="2" style="width: 200px; height: 25px; ;">Thứ</th>
+            <th colspan="2" style="width: 600px; height: 50px;">Hoạt động</th>
         </tr>
         <tr style="background-color: red; color: white">
-            <th>Sáng</th>
-            <th>Chiều</th>
+            <th style="height: 50px;">Sáng</th>
+            <th style="height: 50px;">Chiều</th>
         </tr>
         <tr style="text-align: center;">
-            <td>Thứ Hai</td>
-            <td>Thể dục</td>
-            <td>HD trò chơi mới</td>
+            <td style="height: 50px;">Thứ Hai</td>
+            <td style="height: 50px;">Thể dục</td>
+            <td style="height: 50px;">HD trò chơi mới</td>
         </tr>
         <tr style="text-align: center;">
-            <td>Thứ 3</td>
-            <td>Nhập biết tập nói</td>
-            <td>Rèn nề nếp, kỹ năng sống</td>
+            <td style="height: 50px;">Thứ 3</td>
+            <td style="height: 50px;">Nhập biết tập nói</td>
+            <td style="height: 50px;">Rèn nề nếp, kỹ năng sống</td>
         </tr><tr style="text-align: center;">
-            <td>Thứ 4</td>
-            <td>Âm nhạc</td>
-            <td>Vui chơi</td>
+            <td style="height: 50px;">Thứ 4</td>
+            <td style="height: 50px;">Âm nhạc</td>
+            <td style="height: 50px;">Vui chơi</td>
         </tr><tr style="text-align: center;">
-            <td>Thứ 5</td>
-            <td>Văn học</td>
-            <td>Nhận biết cái giá trị sống</td>
+            <td style="height: 50px;">Thứ 5</td>
+            <td style="height: 50px;">Văn học</td>
+            <td style="height: 50px;">Nhận biết cái giá trị sống</td>
         </tr>
     </table>
 </body>
