--- a/thoikhoabieu.html
+++ b/thoikhoabieu.html
@@ -35,7 +35,7 @@
                 <th colspan="3" style="background-color: orange;">Môn học</th>
             </tr>
             <tr>
-                <td>01</td>
+                <td style="text-align: center;">01</td>
                 <td>01/09/2009</td>
                 <td>05/09/2009</td>
                 <td>CF - T1.L1</td>
@@ -43,7 +43,7 @@
                 <td>CF - T3.L3</td>
             </tr>
             <tr>
-                <td>02</td>
+                <td style="text-align: center;">02</td>
                 <td>08/09/2009</td>
                 <td>12/09/2009</td>
                 <td>CF - T4.L4</td>
@@ -51,7 +51,7 @@
                 <td>CF - T1.L1</td>
             </tr>
             <tr>
-                <td>03</td>
+                <td style="text-align: center;">03</td>
                 <td>...</td>
                 <td>...</td>
                 <td>...</td>
