--- a/formsurvey.html
+++ b/formsurvey.html
@@ -157,6 +157,7 @@
                     <td style="text-align: center;"><input type="radio"><br> 4</td>
                 </tr>
             </table>
+            <button type="submit" style="width: 100px; height: 30px;">Submit</button>
         </Table>
     </form>
 </body>
