--- a/htmlcoban/bancovua.html
+++ b/htmlcoban/bancovua.html
@@ -7,7 +7,7 @@
     <title>Bàn cờ vua</title>
 </head>
 <body>
-        <table style="background-color: orange;">
+        <table style="background-color: orange; border-collapse: collapse;">
             <tr>
                 <td> </td>
                 <td style="text-align: center;">1</td>
