--- a/javasr/khaibaovasudungbien.html
+++ b/javasr/khaibaovasudungbien.html
@@ -24,9 +24,9 @@
         // let height=10;
         // let area= width * height;
         // document.write('area =' +area) bài tập 2
-        let a=prompt('Nhập số a');
-        let b=prompt('Nhập số b');
-        if (b%a==0) {
+        a=prompt('Nhập số a');
+        b=prompt('Nhập số b');
+        if (a%b==0) {
             alert('a là bội số của b')
         }
         else{
