--- a/javasr/ungdungmaytinh.html
+++ b/javasr/ungdungmaytinh.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ứng dụng máy tính</title>
 </head>
+
 <body>
+    <h1>CACULATOR</h1>
     <form action="ungdungmaytinh.html">
         <input type="number" id="num1" placeholder="Nhập số thứ nhất">
         <input type="number" id="num2" placeholder="Nhập số thứ hai">
@@ -14,40 +17,41 @@
     <table>
         <tr>
             <td>
-        <button type="button" onclick="add()">Addition(+)</button>
-        <button type="button" onclick="sub()">Subtraction(-)</button>
-        <button type="button" onclick="multi()">Multiplication(*)</button>
-        <button type="button" onclick="div()">Division(/)</button>
-    </td>
-    </tr>
+                <button type="button" onclick="add()">Addition(+)</button>
+                <button type="button" onclick="sub()">Subtraction(-)</button>
+                <button type="button" onclick="multi()">Multiplication(*)</button>
+                <button type="button" onclick="div()">Division(/)</button>
+            </td>
+        </tr>
     </table>
     <h3>Result:</h3>
     <div id="result"></div>
 </body>
 <script>
-    function add(){
-        let num1 = document.getElementById("num1").value; 
-        let num2 = document.getElementById("num2").value; 
-        let result = Number(num1) + Number(num2); 
+    function add() {
+        let num1 = document.getElementById("num1").value;
+        let num2 = document.getElementById("num2").value;
+        let result = Number(num1) + Number(num2);
         document.getElementById("result").innerHTML = result;
     }
-    function sub(){
-        let num1 = document.getElementById("num1").value; 
-        let num2 = document.getElementById("num2").value; 
-        let result = Number(num1) - Number(num2); 
+    function sub() {
+        let num1 = document.getElementById("num1").value;
+        let num2 = document.getElementById("num2").value;
+        let result = Number(num1) - Number(num2);
         document.getElementById("result").innerHTML = result;
     }
-    function multi(){
-        let num1 = document.getElementById("num1").value; 
-        let num2 = document.getElementById("num2").value; 
-        let result = Number(num1) * Number(num2); 
+    function multi() {
+        let num1 = document.getElementById("num1").value;
+        let num2 = document.getElementById("num2").value;
+        let result = Number(num1) * Number(num2);
         document.getElementById("result").innerHTML = result;
     }
-    function div(){
-        let num1 = document.getElementById("num1").value; 
-        let num2 = document.getElementById("num2").value; 
-        let result = Number(num1) / Number(num2); 
+    function div() {
+        let num1 = document.getElementById("num1").value;
+        let num2 = document.getElementById("num2").value;
+        let result = Number(num1) / Number(num2);
         document.getElementById("result").innerHTML = result;
     }
 </script>
+
 </html>
