--- a/javasr/caulenhswitchcase.html
+++ b/javasr/caulenhswitchcase.html
@@ -18,30 +18,32 @@
 <script>
     let result;
     function countday() {
-        month0 = document.getElementById(month)
+        let month0 = Number(document.getElementById("month").value);
+        let result = '';
         switch (month0) {
-            case(1):
-            case(3):
-            case(5):
-            case(7):
-            case(8):
-            case(10):
-            case(12);
-            result="Tháng" + month0 + "có 31 ngày" ;
-            document.getElementById("result").innerHTML = result;
-            break;
-            case(4)
-            case(6):
-            case(9):
-            case(11):
-            result="Tháng" + month0 + "có 30 ngày" ;
-            document.getElementById("result").innerHTML = result;
-            break;
-            case(2)
-            result="Tháng" + month0 + "có 28 hoặc 29 ngày" ;
-            document.getElementById("result").innerHTML = result;
-            break;
+            case 1:
+            case 3:
+            case 5:
+            case 7:
+            case 8:
+            case 10:
+            case 12:
+                result = "Tháng " + month0 + " có 31 ngày";
+                // document.getElementById("result").innerHTML =('' + result);
+                break;
+            case 4:
+            case 6:
+            case 9:
+            case 11:
+                result = "Tháng " + month0 + " có 30 ngày";
+                // document.getElementById("result").innerHTML = ('' + result);
+                break;
+            case 2:
+                result = "Tháng " + month0 + " có 28 hoặc 29 ngày";
+                // document.getElementById("result").innerHTML = ('' +     result);
+                break;
         }
+        document.getElementById("result").innerHTML = ('' + result);
     }
 </script>
 
