--- a/javasr/tinhchisocannang.html
+++ b/javasr/tinhchisocannang.html
@@ -40,7 +40,7 @@
         } else {
             result = 'Obese';
         }
-        document.getElementById('result').innerHTML= ('' + result)
+        document.getElementById('result').innerHTML= ("Chỉ số BMI " + bmi + " " + result)
     }
     </script>
 </body>
