--- a/javasr/caulenhswitchcase.html
+++ b/javasr/caulenhswitchcase.html
@@ -42,6 +42,8 @@
                 result = "Tháng " + month0 + " có 28 hoặc 29 ngày";
                 // document.getElementById("result").innerHTML = ('' +     result);
                 break;
+                default:
+                    result = "Không tồn tại tháng " + month0;
         }
         document.getElementById("result").innerHTML = ('' + result);
     }
