--- a/javasr/caulenhswitchcase.html
+++ b/javasr/caulenhswitchcase.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h2>Kiểm tra số ngày trong tháng</h2>
     <form>
         <input type="number" id="month">
         <input type="button" onclick="countday()" value="Tính số ngày">
