--- a/javasr/maytinhcoban.html
+++ b/javasr/maytinhcoban.html
@@ -6,51 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Máy tính</title>
+    <style>
+        button {
+            width: 35px;
+        }
+    </style>
 </head>
 
 <body>
+    <h2>CACULATOR</h2>
     <form>
-    <input type="text" id="screen" style="width: 100px;">
+    <input type="text" id="screen" style="width: 147px;">
     <br>
     <table>
         <tr>
-            <td><input type="button" value="1" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="2" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="3" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="+" onclick="inputvalue(this.value)"></td>
+            <td><button type="button" value="1" onclick="inputValue(this.value)">1</button></td>
+            <td><button type="button" value="2" onclick="inputValue(this.value)">2</button></td>
+            <td><button type="button" value="3" onclick="inputValue(this.value)">3</button></td>
+            <td><button type="button" value="+" onclick="inputValue(this.value)">+</button></td>
         </tr>
         <tr>
-            <td><input type="button" value="4" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="5" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="6" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="-" onclick="inputvalue(this.value)"></td>
+            <td><button type="button" value="4" onclick="inputValue(this.value)">4</button></td>
+            <td><button type="button" value="5" onclick="inputValue(this.value)">5</button></td>
+            <td><button type="button" value="6" onclick="inputValue(this.value)">6</button></td>
+            <td><button type="button" value="-" onclick="inputValue(this.value)">-</button></td>
         </tr>
         <tr>
-            <td><input type="button" value="7" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="8" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="9" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="x" onclick="inputvalue(this.value)"></td>
+            <td><button type="button" value="7" onclick="inputValue(this.value)">7</button></td>
+            <td><button type="button" value="8" onclick="inputValue(this.value)">8</button></td>
+            <td><button type="button" value="9" onclick="inputValue(this.value)">9</button></td>
+            <td><button type="button" value="*" onclick="inputValue(this.value)">x</button></td>
         </tr>
         <tr>
-            <td><input type="button" value="C" onclick="delete()"></td>
-            <td><input type="button" value="0" onclick="inputvalue(this.value)"></td>
-            <td><input type="button" value="=" onclick="kq()"></td>
-            <td><input type="button" value="/" onclick="inputvalue(this.value)"></td>
+            <td><button type="button" value="C" onclick="AC();">AC</button></td>
+            <td><button type="button" value="0" onclick="inputValue(this.value)">0</button></td>
+            <td><button type="button" name= "kq" onclick="result();"> = </button></td>
+            <td><button type="button" value="/" onclick="inputValue(this.value)">/</button></td>
         </tr>
     </table>
 </form>
 </body>
 <script>
     let screen=document.getElementById("screen");
-    function inputvalue(value){
+    function inputValue(value) {
         screen.value += value;
     }
-    function kq(){
-        let kq = eval(screen.value);
-        screen.value = kq;
+    function result() {
+        let result= eval(screen.value);
+        screen.value = result;
     }
-    function delete(){
-        view.value="";
+    function AC() {
+        screen.value="";
     }
 </script>
 </html>
