--- a/javasr/btkienkieudulieuvatoantu.html
+++ b/javasr/btkienkieudulieuvatoantu.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <script>
-        // diemVatli=prompt('Nhập điểm Vật lí')
-        // diemHoahoc=prompt('Nhập điểm Hoá học')
-        // diemSinhhoc=prompt('Nhập điểm Sinh học')
-        // let V= parseFloat(diemVatli)
-        // let H= parseFloat(diemHoahoc)
-        // let S= parseFloat(diemSinhhoc)
-        // dtb= (V+H+S)/3
-        // document.write('Điểm trung bình =' + dtb) bài tâp 1
+        diemVatli=prompt('Nhập điểm Vật lí')
+        diemHoahoc=prompt('Nhập điểm Hoá học')
+        diemSinhhoc=prompt('Nhập điểm Sinh học')
+        let V= parseFloat(diemVatli)
+        let H= parseFloat(diemHoahoc)
+        let S= parseFloat(diemSinhhoc)
+        dtb= (V+H+S)/3
+        document.write('Điểm trung bình =' + dtb) 
         // let doC = prompt('Nhập C:')
         // let C= parseFloat(doC)
         // F= (9*C+160)/5
@@ -24,10 +24,10 @@
         // let R=parseFloat(inputR)
         // dientich=R*R*3.14
         // document.write('Diện tích hình tròn là ' + dientich) bài tập 3
-        inputR=prompt('Nhập bán kính:')
-        let R=parseFloat(inputR)
-        chuvi= R*2*3.14
-        document.write('Chu vi hình tròn là ' + chuvi)
+        // inputR=prompt('Nhập bán kính:')
+        // let R=parseFloat(inputR)
+        // chuvi= R*2*3.14
+        // document.write('Chu vi hình tròn là ' + chuvi)
     </script>
 </body>
 </html>
