--- a/javasr/sign.html
+++ b/javasr/sign.html
@@ -11,7 +11,7 @@
 <body>
 </body>
 <script>
-    // let value=prompt('Type a number',0);
+    // let value=+prompt('Type a number',0);
     // if (value>0) {
     //     alert(1);
     // } else if (value<0){
@@ -19,7 +19,7 @@
     // } else {
     //     alert(0);
     // }
-    let value = prompt('Type a number',0);
+    let value = +prompt('Type a number',0);
     switch (true) {
         case (value > 0):
             alert(1);
