--- a/luyentap/dieukien2/bt6.html
+++ b/luyentap/dieukien2/bt6.html
@@ -10,9 +10,10 @@
     <script>
         let a=+prompt('a');
         let b=+prompt('b');
-        let x;
+        let x=0;
         x=-b/a
-        document.write('Nghiệm của phương trình ' + a +'x' + '+'+ b + ' = 0 là ' + x)
+        // document.write('Nghiệm của phương trình ' + a +'x' + '+'+ b + ' = 0 là ' + x)
+        document.write(`Nghiệm của phương trình ${a}x+${b}=0 là ${x}`)
     </script>
 </body>
 </html>
