--- a/javasr/bangcuuchuong.html
+++ b/javasr/bangcuuchuong.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bảng cửu chương</title>
+    <style>
+
+    </style>
 </head>
 <body>
     <script>
-        let sout,i,j;
-        sout = " <table border='1' width='1000' padding='2' cellpadding='5'>"
-            for (i = 1; i <= 10; i++) {
-            sout = sout + "<tr>";
+        let i, j;
+        document.write(" <table border='1' width='500' padding='1' cellpadding='5' >");
+        for (i = 1; i <= 10; i++) {
+            document.write("<tr>");
             for (j = 2; j <= 9; j++) {
-                sout = sout + "<td>" + j + "x" + i + "=" + i * j + "</td>";
-            }
-            sout = sout + "</tr>";
+                if(j%2==0){
+                document.write(`<td style="background-color:red ;">${j}x${i}=${i * j}</td>`);
+                } else{
+                document.write(`<td>${j}x${i}=${i * j}</td>`);
+                }
+            }3
+            document.write("</tr>");
         }
-sout = sout + "</table>";
-document.write(sout);
+        document.write("</table>");
+
     </script>
 </body>
+
 </html>
