--- a/mang/dich.html
+++ b/mang/dich.html
@@ -21,7 +21,7 @@
     let result = "";
     for (let i = 0; i < arr_eng.length; i++) {
         if (string == arr_eng[i]) {
-            index_eng = i; //2
+            index_eng = i;
             for (let j = 0; j < arr_vie.length; j++) {
                 if (index_eng == j) { 
                     result = arr_vie[j]; 
