--- a/luyentap/mang1/bt4.html
+++ b/luyentap/mang1/bt4.html
@@ -14,6 +14,7 @@
         for(i = 0;i<num;i++){
             a[i]=+prompt('Nhap phan tu ');
         }
+        document.write(a +'<br>');
         document.write(a.reverse());
     </script>
 </body>
