--- a/luyentap/mang1/bt5.html
+++ b/luyentap/mang1/bt5.html
@@ -12,7 +12,7 @@
         let i=0,dem=0;
         let num=+prompt('Nhap size');
         for(i = 0;i<num;i++){
-            a[i]=+prompt('Nhap phan tu ');
+            a[i]=Math.floor(Math.random()*21-10);
         }
         for(i = 0;i<num;i++){
          if (a[i]<0){
