--- a/mang/demo.html
+++ b/mang/demo.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table,
+        tr,
+        td {
+            border-collapse: collapse;
+            border: 1px solid black;
+            width: 400px;
+            ;
+        }
+    </style>
 </head>
+
 <body>
     <script>
-        let a =[1,34,2,5,34];
-        let b =['c',34,2,5,[34,0]];
-        document.write(a.join("")+'<br>');
-        document.write(b.toString(""));
+        let jobs = ["Lau nhà", "Nấu cơm", "Rửa chén", "Quét nhà"];
+        let result;
+        jobs.map(function (job, index) {
+            result = ` <table>
+                <tr>
+                    <td>${index + 1}</td>
+                    <td>${job}</td>
+                    <td><button type="button">Remove</button>
+                        <button type="button">Cancel</button></td>
+                        </tr></table>`;
+            document.write(result);
+        })
     </script>
 </body>
+
 </html>
