--- a/oop/funnycircle.html
+++ b/oop/funnycircle.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funny Circle</title>
 </head>
+<canvas id="myCanvas" width="1368px" height="768px" style="border:1px solid #d3d3d3;"></canvas>
+
 <body>
-    
+    <script>
+        function Circle(x, y, radius) {
+            this.x = x;
+            this.y = y;
+            this.radius = radius;
+        }
+        function random(){
+            return Math.floor(Math.random()*256);
+        }
+        function randoncolor(){
+            let red=random();
+            let green=random();
+            let blue=random();
+            return `rgb(${red},${green},${blue})`
+        }
+        function createCircle() {   
+            let c = document.getElementById("myCanvas");
+            let ctx = c.getContext("2d");
+            let radius=Math.floor(Math.random()*(81)+0);
+            let color=randoncolor();
+            let x=Math.random()*window.innerWidth;
+            let y=Math.random()*window.innerHeight;
+            let circle =new Circle(x,y,radius);
+            ctx.beginPath();
+            ctx.arc(circle.x, circle.y, circle.radius, 0, 2 * Math.PI);
+            ctx.fillStyle=color;
+            ctx.fill();
+        }
+        for( let i =0;i<50;i++){
+            createCircle();
+        }
+    </script>
 </body>
+
 </html>
