--- a/oop/temperature.html
+++ b/oop/temperature.html
@@ -19,7 +19,7 @@
     }
     let C= new Temperature(25);
     console.log(`${C.Celsius}C = ${C.getF()}F`);
-    console.log(`${C.Celsius}C = ${C.getK()}K`);
+    console.log(`${C.Celsius}C = ${C.getK().toFixed(2)}K`);
     </script>
 </body>
 </html>
