--- a/oop/funnycircle.html
+++ b/oop/funnycircle.html
@@ -36,6 +36,7 @@
             ctx.beginPath();
             ctx.arc(circle.x, circle.y, circle.radius, 0, 2 * Math.PI);
             ctx.fillStyle=color;
+            // ctx.moveto(x,y);
             ctx.fill();
         }
         for( let i =0;i<30;i++){
