--- a/oop/telephone.html
+++ b/oop/telephone.html
@@ -10,9 +10,8 @@
    <script>
        function MoblieIphone(battery){
         this.battery=battery;
-        this.texingarea=function(){
-            return 
-        }
+        this.texingarea= "";
+        
 
        }
    </script> 
